--- a/package.json
+++ b/package.json
@@ -1,21 +1,70 @@
 {
-    "name": "my-server-app",
-    "version": "0.0.1",
-    "description": "my server app",
-    "dependencies": {
-        "body-parser": "^1.18.3",
-        "cookie-parser": "^1.4.3",
-        "cors": "^2.8.4",
-        "express": "^4.16.3",
-        "express-jwt": "^5.3.1",
-        "jsonwebtoken": "^8.2.1",
-        "mongoose": "^5.1.2",
-        "morgan": "^1.9.0",
-        "passport": "^0.4.0",
-        "passport-local": "^1.0.0",
-        "path": "^0.12.7"
-    },
-    "devDependencies": {
-        "nodemon": "^1.17.5"
-    }
+  "name": "altsource-code-sample",
+  "version": "0.0.0",
+  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "start2": "ng serve --proxy-config proxy.conf.json",
+    "build": "ng build --prod",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^5.2.0",
+    "@angular/cli": "~1.7.4",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "cross-env": "^5.2.0",
+    "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.2.1",
+    "mongoose": "^5.1.2",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "rxjs": "^5.5.6",
+    "typescript": "~2.5.3",
+    "zone.js": "^0.8.19"
+  },
+  "heroku-postbuild": "ng build --prod",
+  "engines": {
+    "node": "~8.9.4",
+    "npm": "~5.6.0"
+  },
+  "devDependencies": {
+    "@angular/cli": "~1.7.4",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/language-service": "^5.2.0",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "^4.0.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~4.1.0",
+    "tslint": "~5.9.1",
+    "typescript": "~2.5.3",
+    "nodemon": "^1.17.5"
+  }
 }
